tests/NormalTests/paczka1/fuzzy1/82640293.err
Error in line 8: 52k1au S526 44,2
Error in line 9: 52k1au A379 82,1
Error in line 30: 37BZwTK A379 4,3
Error in line 24: 52k1au A699 64,2
Error in line 26: 9y8 S526 56,7
